@@ -9,8 +9,8 @@ REQUIRES = ['SQLAlchemy',
             'configobj',
             "python-dateutil==1.5",
             "python-rest-client",
-#            "numpy",
-#            "matplotlib",
+            "numpy",
+            "matplotlib",
             "pyserial",
             "requests",
             "pyrrd",
@@ -21,9 +21,9 @@ REQUIRES = ['SQLAlchemy',
             ]
     
 setup(name='ch-base',
-      version='1.1.1',
+      version='1.1.3',
       description='CogentHouse base station logger',
-      author='James Brusey, Ross Wilkins',
+      author='James Brusey, Ross Wilkins', 'Dan Goldsmith'
       author_email='james.brusey@gmail.com',
       packages=['cogent',
                 'cogent.base',
@@ -33,16 +33,13 @@ setup(name='ch-base',
                 'cogent.node',
                 'cogent.scripts'],
       package_data={'cogent.base' : ['Calibration/*.csv']},
-      data_files=[#('/etc/init', ['etc/ch-sf.conf', 'etc/ch-base.conf', 'etc/noip2.conf']),
-                  #('/etc/cron.daily', ['etc/ch-daily-email']),
-                  #('/etc/apache2/sites-available', ['etc/cogent-house']),
-                  #('/var/www/cogent-house', ['www/index.py']),
-                  #('/var/www/scripts', ['www/scripts/datePicker.js']),
-                  #('/var/www/style', ['www/style/ccarc.css']),
+      data_files=[('/etc/init', ['etc/ch-sf.conf', 'etc/ch-base.conf', 'etc/noip2.conf']),
+                  ('/etc/cron.daily', ['etc/ch-daily-email']),
+                  ('/etc/apache2/sites-available', ['etc/cogent-house']),
+                  ('/var/www/cogent-house', ['www/index.py']),
+                  ('/var/www/scripts', ['www/scripts/datePicker.js']),
+                  ('/var/www/style', ['www/style/ccarc.css']),
                   ("{0}/share/cogent-house/calibration".format(sys.prefix),["cogent/base/Calibration/aq_coeffs.csv",
-                                                                            "cogent/base/Calibration/co2_coeffs.csv",
-                                                                            "cogent/base/Calibration/hum_coeffs.csv",
-                                                                            "cogent/base/Calibration/temp_coeffs.csv",
                                                                             "cogent/base/Calibration/voc_coeffs.csv"]),
                   ],
       entry_points = """\
